--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <a href="https://logwork.com/countdown-timer" onclick="return false;" class="countdown-timer" data-style="flip3" data-timezone="Europe/Amsterdam" data-language="nl" data-textcolor="#000000" data-date="2026-01-19 00:00" data-unitscolor="#000000">Aftellen tot Charlotte's verjaardag'</a>
+    <a href="https://logwork.com/countdown-timer" onclick="return false;" class="countdown-timer" data-style="flip3" data-timezone="Europe/Amsterdam" data-language="nl" data-textcolor="#000000" data-date="2026-01-19 00:00" data-unitscolor="#000000">Aftellen tot Charlotte's verjaardag</a>
     <p id='lengte' style="text-align:center;font-size:26px;font-family:Arial"></p>
 
 
