--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <a href="https://logwork.com/countdown-timer" onclick="return false;" class="countdown-timer" data-style="flip3" data-timezone="Europe/Amsterdam" data-language="nl" data-textcolor="#000000" data-date="2026-01-19 00:00" data-unitscolor="#000000">Aftellen tot Charlotte's verjaardag</a>
-    <p id='lengte' style="text-align:center;font-size:26px;font-family:Arial"></p>
+    <p style="text-align:center;font-size:26px;font-family:Arial">Ze is al <b id="lengte"></b> 19.</p>
 
 
     <script>
@@ -15,7 +15,7 @@
         const verschil = Math.round(Math.abs((vorigeVerjaardag - vandaag) / eenDag));
         const teGaan = Math.round(Math.abs((volgendeVerjaardag - vandaag) / eenDag));
 
-        var abcd = "Ze is al " + verschil + " dagen 19.";
+        var abcd = verschil + " dagen";
         document.getElementById('lengte').innerHTML = abcd;
 
         var background;
