--- a/loet/index.html
+++ b/loet/index.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="/yippee.jpg" />
 </head>
 <body>
-    <a href="https://logwork.com/countdown-timer" onclick="return false;" class="countdown-timer" data-style="flip3" data-timezone="Europe/Amsterdam" data-language="nl" data-textcolor="#000000" data-date="2025-04-23 00:00" data-unitscolor="#000000">Aftellen tot Loet verjaardag</a>
+    <a href="https://logwork.com/countdown-timer" onclick="return false;" class="countdown-timer" data-style="flip3" data-timezone="Europe/Amsterdam" data-language="nl" data-textcolor="#000000" data-date="2025-04-23 00:00" data-unitscolor="#000000">Aftellen tot Loet's verjaardag</a>
     <p style="text-align:center;font-size:26px;font-family:Arial">Hij is al <b id="lengte"></b> 17.</p>
 
 
